feature(trips): Both Admin and User can see all trips [Started #167734156]
