# server/api/controllers/trips/router.js
@@ -10,4 +10,5 @@ import {
 export default express.Router()
   .post('/', [validateAuthToken, validatePermission('admin'), validateCreateTripInputs], controller.createTrip)
   .patch('/:tripId/cancel', [validateAuthToken, validatePermission('admin'), validateInteger], controller.cancelTrip)
+  .get('/', [validateAuthToken], controller.showTrips)
 
